Fix Breakdown display on small screens and vertical screens

--- a/story/breakdown/styles.css
+++ b/story/breakdown/styles.css
@@ -45,15 +45,35 @@ Name box: 	600x200 px 		(15%, 9.25925...%)
 	height:100%;
 }
 
-@media (max-width: 50rem){
-	.m-vn-textbox{
+@media (max-width: 60rem){
+	.m-vn-textbox:not(.name){
 		left:0;
 		right:0;
 		bottom:0;
+		min-height:2.5em;
 	}
 
 	.name{
 		left:0;
-		bottom:6em;
+		bottom:3.25em;
+	}
+}
+
+@media (max-width: 30rem){
+	.character{
+		height:46%;
+		bottom:12em;
+	}
+	
+	.m-vn-textbox:not(.name){
+		left:0;
+		right:0;
+		bottom:0;
+		min-height:6em;
+	}
+
+	.name{
+		left:0;
+		bottom:5.25em;
 	}
 }
